syntax = "proto3";

package twirp.example.haberdasher;

//import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package = "haberdasher";
option csharp_namespace = "Pj.Protobuf.Haberdasher";

//option (gogoproto.goproto_unrecognized_all) = false;
//option (gogoproto.goproto_unkeyed_all) = false;
//option (gogoproto.goproto_sizecache_all) = false;

// Haberdasher service makes hats for clients.
service Haberdasher {
    // MakeHat produces a hat of mysterious, randomly-selected color!
    rpc MakeHat(Size) returns (Hat);
}

// Size of a Hat, in inches.
message Size {
    int32 inches = 1; // must be > 0
}

// A Hat is a piece of headwear made by a Haberdasher.
message Hat {
    string id = 1; // [json_name="hat_id"];
    int32 inches = 2;
    string color = 3; // anything but "invisible"

    string name = 4; // [(gogoproto.moretags) = "datastore:\",noindex\""]; // i.e. "bowler"
}